# job-server

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
database/: jobserver.sqlite
docs/: start_job.md
scripts/: _common.ps1  _common.sh  clean-all.ps1  clean-all.sh  clean-environment.ps1  clean-environment.sh  clean-package.ps1  clean-package.sh  generate-stubs.ps1  generate-stubs.sh  rebuild-all.ps1  rebuild-all.sh  rebuild-install-package.ps1  rebuild-install-package.sh  rebuild-package.sh  run-tests.ps1  run-tests.sh  setup-environment.ps1  setup-environment.sh
src/: core.py  data.py  enums.py  structs.py
src/assets/: default_config.json  jobserver.temp.sqlite3
src/internal/: data.py
src/jobserver/: __init__.py  core.py  data.py  enums.py  structs.py
src/jobserver/assets/: default_config.json  jobserver.temp.sqlite3
src/jobserver/internal/: utils.py
tests/: test_advanced.py  test_fast_api.py
tests/fixtures/: clients.py  database_entry_factories.py  job_factories.py
tests/fixtures/jobs/: file_write_read_job.py
tests/integration/: test_basic_server_control.py
tests/integration/fixtures/: file_write_read_job.py
tests/unit/: fixtures.py  test_core.py  test_data.py
